Addressed PR comments

--- a/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
@@ -23,39 +23,39 @@ imap_codice_l1a_lo_sw_angular_counts:
     TEXT: *txt
     Data_type: L1A_lo-sw-angular-counts->Level-1A Lo Sunward Angular Counts Data
     Logical_source: imap_codice_l1a_lo-sw-angular-counts
-    Logical_source_description: IMAP Mission CoDICE Instrument Level-1A Lo Sunward Angular Counts Data.
+    Logical_source_description: IMAP Mission CoDICE Lo Level-1A Sunward Angular Counts Data.
 
 imap_codice_l1a_lo_nsw_angular_counts:
     Descriptor: *desc
     TEXT: *txt
     Data_type: L1A_lo-nsw-angular-counts->Level-1A Lo Non-Sunward Angular Counts Data
     Logical_source: imap_codice_l1a_lo-nsw-angular-counts
-    Logical_source_description: IMAP Mission CoDICE Instrument Level-1A Lo Non-Sunward Angular Counts Data.
+    Logical_source_description: IMAP Mission CoDICE Lo Level-1A Non-Sunward Angular Counts Data.
 
 imap_codice_l1a_lo_sw_priority_counts:
     Descriptor: *desc
     TEXT: *txt
     Data_type: L1A_lo-sw-priority-counts->Level-1A Lo Sunward Priority Counts Data
     Logical_source: imap_codice_l1a_lo-sw-priority-counts
-    Logical_source_description: IMAP Mission CoDICE Instrument Level-1A Lo Sunward Priority Counts Data.
+    Logical_source_description: IMAP Mission CoDICE Lo Level-1A Sunward Priority Counts Data.
 
 imap_codice_l1a_lo_nsw_priority_counts:
     Descriptor: *desc
     TEXT: *txt
     Data_type: L1A_lo-nsw-priority-counts->Level-1A Lo Non-Sunward Priority Counts Data
     Logical_source: imap_codice_l1a_lo-nsw-priority-counts
-    Logical_source_description: IMAP Mission CoDICE Instrument Level-1A Lo Non-Sunward Priority Counts Data.
+    Logical_source_description: IMAP Mission CoDICE Lo Level-1A Non-Sunward Priority Counts Data.
 
 imap_codice_l1a_lo_sw_species_counts:
     Descriptor: *desc
     TEXT: *txt
     Data_type: L1A_lo-sw-species-counts->Level-1A Lo Sunward Species Counts Data
     Logical_source: imap_codice_l1a_lo-sw-species-counts
-    Logical_source_description: IMAP Mission CoDICE Instrument Level-1A Lo Sunward Species Counts Data.
+    Logical_source_description: IMAP Mission CoDICE Lo Level-1A Sunward Species Counts Data.
 
 imap_codice_l1a_lo_nsw_species_counts:
     Descriptor: *desc
     TEXT: *txt
     Data_type: L1A_lo-nsw-species-counts->Level-1A Lo Non-Sunward Species Counts Data
     Logical_source: imap_codice_l1a_lo-nsw-species-counts
-    Logical_source_description: IMAP Mission CoDICE Instrument Level-1A Lo Non-Sunward Species Counts Data.
+    Logical_source_description: IMAP Mission CoDICE Lo Level-1A Non-Sunward Species Counts Data.
