--- a/imap_processing/cdf/config/imap_ultra_l1b_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_ultra_l1b_variable_attrs.yaml
@@ -3,8 +3,8 @@ default_attrs: &default
   DEPEND_0: epoch
   DISPLAY_TYPE: time_series
   FILLVAL: -9223372036854775808
-  FORMAT: I12
-  VALIDMIN: -9223372036854775808
+  FORMAT: I19
+  VALIDMIN: 0
   VALIDMAX: 9223372036854775807
   VAR_TYPE: data
 
