update to data structure

--- a/imap_processing/cdf/config/imap_ultra_l1c_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_ultra_l1c_variable_attrs.yaml
@@ -132,3 +132,11 @@ packetdata:
   LABLAXIS: packet data
   # TODO: come back to format
   UNITS: " "
+
+bin_number:
+  <<: *default
+  CATDESC: Bin number.
+  FIELDNAM: bin
+  LABLAXIS: bin
+  # TODO: come back to format
+  UNITS: " "
