CoDICE L1a lo-counters-aggregated and lo-counters-singles (#585)
* Added support for lo-counters-aggregated and lo-counters-singles
* CDF data product names can now be list since FIELDNAMs and CATDESCs are defined in yaml files

--- a/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
@@ -58,6 +58,16 @@ esa_sweep_attrs:
     VALIDMIN: 0
     VAR_TYPE: support_data
 
+lo_counters_aggregated-aggregated:
+    <<: *counters
+    CATDESC: Aggregated Rates
+    FIELDNAM: Rates - Aggregated
+
+lo_counters_singles-apd_singles:
+    <<: *counters
+    CATDESC: Single Rates (APD)
+    FIELDNAM: Rates - Single (APD)
+
 lo_sw_angular_counts-hplus:
     <<: *counters
     CATDESC: Sunward H+ Species
