--- a/imap_processing/cdf/config/imap_swe_l1b_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_swe_l1b_variable_attrs.yaml
@@ -48,6 +48,26 @@ cycle:
   VALIDMIN: 0
   VAR_TYPE: support_data
 
+# <=== Label Attributes ===>
+# LABL_PTR_i expects VAR_TYPE of metadata with char data type
+energy_label:
+  CATDESC: Energy step id in lookup table
+  FIELDNAM: Energy Step ID
+  FORMAT: A2
+  VAR_TYPE: metadata
+
+angle_label:
+  CATDESC: Spin angle step. Angle resolution is 12 degree nominally
+  FIELDNAM: 12 Degree Resolution
+  FORMAT: A2
+  VAR_TYPE: metadata
+
+cem_label:
+  CATDESC: Data rates of each CEM detectors
+  FIELDNAM: CEM Rates
+  FORMAT: A1
+  VAR_TYPE: metadata
+
 # TODO: how to avoid repeating this?
 epoch:
   CATDESC: Time, number of nanoseconds since J2000 with leap seconds included
@@ -86,6 +106,9 @@ science_data:
   DEPEND_1: energy
   DEPEND_2: angle
   DEPEND_3: cem
+  LABL_PTR_1: energy_label
+  LABL_PTR_2: angle_label
+  LABL_PTR_3: cem_label
   DISPLAY_TYPE: spectrogram
   FIELDNAM: Counts rate by volt step and spin sector and CEM
   FORMAT: E14.7
