--- a/imap_processing/cdf/config/imap_lo_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_lo_global_cdf_attrs.yaml
@@ -33,3 +33,45 @@ imap_lo_l1a_spin:
   Data_type: L1A_star>Level-1A Spin
   Logical_source: imap_lo_l1a_spin
   Logical_source_description: IMAP Mission IMAP-Lo Instrument Level-1A Data
+
+imap_lo_l1b_badtimes:
+  <<: *instrument_base
+  Data_level: 1B
+  Data_type: L1B_badtimes>Level-1B Badtimes
+  Logical_source: imap_lo_l1b_badtimes
+  Logical_source_description: IMAP Mission IMAP-Lo Instrument Level-1B Data
+
+imap_lo_l1b_de:
+  <<: *instrument_base
+  Data_level: 1B
+  Data_type: L1B_de>Level-1B Annotated Direct Events
+  Logical_source: imap_lo_l1b_de
+  Logical_source_description: IMAP Mission IMAP-Lo Instrument Level-1B Data
+
+imap_lo_l1b_monitorrates:
+  <<: *instrument_base
+  Data_level: 1B
+  Data_type: L1B_monitorrates>Level-1B Monitor Rates
+  Logical_source: imap_lo_l1b_monitorrates
+  Logical_source_description: IMAP Mission IMAP-Lo Instrument Level-1B Data
+
+imap_lo_l1b_histogramrates:
+  <<: *instrument_base
+  Data_level: 1B
+  Data_type: L1B_histogramrates>Level-1B Histogram Rates
+  Logical_source: imap_lo_l1b_histogramrrates
+  Logical_source_description: IMAP Mission IMAP-Lo Instrument Level-1B Data
+
+imap_lo_l1b_derates:
+  <<: *instrument_base
+  Data_level: 1B
+  Data_type: L1B_derates>Level-1B Direct Event Rates
+  Logical_source: imap_lo_l1b_derates
+  Logical_source_description: IMAP Mission IMAP-Lo Instrument Level-1B Data
+
+imap_lo_l1b_prostar:
+  <<: *instrument_base
+  Data_level: 1B
+  Data_type: L1B_prostar>Level-1B Processed Star Sensor
+  Logical_source: imap_lo_l1b_prostar
+  Logical_source_description: IMAP Mission IMAP-Lo Instrument Level-1B Data
