--- a/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
@@ -1,3 +1,5 @@
+# TODO: Add clarifying section headers
+
 default_attrs: &default
   # Assumed values for all variable attrs unless overwritten
   DISPLAY_TYPE: no_plot
@@ -48,6 +50,22 @@ energy_attrs:
     VALIDMAX: 127
     VAR_TYPE: support_data
 
+epoch:
+  CATDESC: Time, number of nanoseconds since J2000 with leap seconds included
+  FIELDNAM: epoch
+  LABLAXIS: epoch
+  FILLVAL: -9223372036854775808
+  FORMAT: " " # Supposedly not required, fails in xarray_to_cdf
+  VALIDMIN: -9223372036854775808
+  VALIDMAX: 9223372036854775807
+  UNITS: ns
+  VAR_TYPE: support_data
+  SCALETYP: linear
+  MONOTON: INCREASE
+  TIME_BASE: J2000
+  TIME_SCALE: Terrestrial Time
+  REFERENCE_POSITION: Rotating Earth Geoid
+
 esa_sweep_attrs:
     <<: *default
     CATDESC: ElectroStatic Analyzer Energy Values
@@ -57,6 +75,11 @@ esa_sweep_attrs:
     UNITS: V
     VALIDMIN: 0
     VAR_TYPE: support_data
+
+hi_counters_aggregated-aggregated:
+    <<: *counters
+    CATDESC: Aggregated Rates
+    FIELDNAM: Rates - Aggregated
 
 lo_counters_aggregated-aggregated:
     <<: *counters
