--- a/imap_processing/cdf/config/imap_swe_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_swe_l1a_variable_attrs.yaml
@@ -27,6 +27,23 @@ polar_angle:
   VAR_NOTES: " "
   VAR_TYPE: support_data
 
+# <=== Label Attributes ===>
+# LABL_PTR_i expects VAR_TYPE of metadata with char data type.
+# We need to define this if we have DEPEND_1 or more.
+# TODO: I am not sure what the FIELDNAM should be.
+# I tried best to match this: https://spdf.gsfc.nasa.gov/istp_guide/variables.html#Metadata_eg1
+spin_angle_label:
+  CATDESC: 180 measurements per quarter cycle
+  FIELDNAM: Spin Angle
+  FORMAT: A3
+  VAR_TYPE: metadata
+
+polar_angle_label:
+  CATDESC: This is angle of 7 CEMs
+  FIELDNAM: CEM Counts
+  FORMAT: A1
+  VAR_TYPE: metadata
+
 # TODO: how to avoid repeating this?
 epoch:
   CATDESC: Time, number of nanoseconds since J2000 with leap seconds included
@@ -64,10 +81,11 @@ raw_counts:
   CATDESC: Raw Counts stored in 8bits length
   DEPEND_1: spin_angle
   DEPEND_2: polar_angle
+  LABL_PTR_1: spin_angle_label
+  LABL_PTR_2: polar_angle_label
   DISPLAY_TYPE: spectrogram
   FIELDNAM: Raw Counts
   FORMAT: I3
-  LABLAXIS: Raw cnts
   UNITS: counts
   VALIDMAX: 256
   VALIDMIN: 0
@@ -78,10 +96,11 @@ science_data:
   CATDESC: Decompressed Counts
   DEPEND_1: spin_angle
   DEPEND_2: polar_angle
+  LABL_PTR_1: spin_angle_label
+  LABL_PTR_2: polar_angle_label
   DISPLAY_TYPE: spectrogram
   FIELDNAM: Decompressed Counts
   FORMAT: I5
-  LABLAXIS: Decom cnts
   UNITS: counts
   VALIDMAX: 66539
   VALIDMIN: 0
