--- a/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
@@ -26,6 +26,13 @@ imap_codice_l1a_hi_counters_aggregated:
     Logical_source: imap_codice_l1a_hi-counters-aggregated
     Logical_source_description: IMAP Mission CoDICE Hi Level-1A Aggregated Instrument Counts Data.
 
+imap_codice_l1a_hi_counters_singles:
+    <<: *instrument_base
+    Data_level: 1A
+    Data_type: L1A_hi-counters-aggregated->Level-1A Hi Single Instrument Counts Data
+    Logical_source: imap_codice_l1a_hi-counters-singles
+    Logical_source_description: IMAP Mission CoDICE Hi Level-1A Single Instrument Counts Data.
+
 imap_codice_l1a_lo_counters_aggregated:
     <<: *instrument_base
     Data_level: 1A
@@ -40,44 +47,44 @@ imap_codice_l1a_lo_counters_singles:
     Logical_source: imap_codice_l1a_lo-counters-singles
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Single Instrument Counts Data.
 
-imap_codice_l1a_lo_sw_angular_counts:
+imap_codice_l1a_lo_sw_angular:
     <<: *instrument_base
     Data_level: 1A
-    Data_type: L1A_lo-sw-angular-counts->Level-1A Lo Sunward Angular Counts Data
-    Logical_source: imap_codice_l1a_lo-sw-angular-counts
+    Data_type: L1A_lo-sw-angular->Level-1A Lo Sunward Angular Counts Data
+    Logical_source: imap_codice_l1a_lo-sw-angular
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Sunward Angular Counts Data.
 
-imap_codice_l1a_lo_nsw_angular_counts:
+imap_codice_l1a_lo_nsw_angular:
     <<: *instrument_base
     Data_level: 1A
-    Data_type: L1A_lo-nsw-angular-counts->Level-1A Lo Non-Sunward Angular Counts Data
-    Logical_source: imap_codice_l1a_lo-nsw-angular-counts
+    Data_type: L1A_lo-nsw-angular->Level-1A Lo Non-Sunward Angular Counts Data
+    Logical_source: imap_codice_l1a_lo-nsw-angular
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Non-Sunward Angular Counts Data.
 
-imap_codice_l1a_lo_sw_priority_counts:
+imap_codice_l1a_lo_sw_priority:
     <<: *instrument_base
     Data_level: 1A
-    Data_type: L1A_lo-sw-priority-counts->Level-1A Lo Sunward Priority Counts Data
-    Logical_source: imap_codice_l1a_lo-sw-priority-counts
+    Data_type: L1A_lo-sw-priority->Level-1A Lo Sunward Priority Counts Data
+    Logical_source: imap_codice_l1a_lo-sw-priority
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Sunward Priority Counts Data.
 
-imap_codice_l1a_lo_nsw_priority_counts:
+imap_codice_l1a_lo_nsw_priority:
     <<: *instrument_base
     Data_level: 1A
-    Data_type: L1A_lo-nsw-priority-counts->Level-1A Lo Non-Sunward Priority Counts Data
-    Logical_source: imap_codice_l1a_lo-nsw-priority-counts
+    Data_type: L1A_lo-nsw-priority->Level-1A Lo Non-Sunward Priority Counts Data
+    Logical_source: imap_codice_l1a_lo-nsw-priority
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Non-Sunward Priority Counts Data.
 
-imap_codice_l1a_lo_sw_species_counts:
+imap_codice_l1a_lo_sw_species:
     <<: *instrument_base
     Data_level: 1A
-    Data_type: L1A_lo-sw-species-counts->Level-1A Lo Sunward Species Counts Data
-    Logical_source: imap_codice_l1a_lo-sw-species-counts
+    Data_type: L1A_lo-sw-species->Level-1A Lo Sunward Species Counts Data
+    Logical_source: imap_codice_l1a_lo-sw-species
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Sunward Species Counts Data.
 
-imap_codice_l1a_lo_nsw_species_counts:
+imap_codice_l1a_lo_nsw_species:
     <<: *instrument_base
     Data_level: 1A
-    Data_type: L1A_lo-nsw-species-counts->Level-1A Lo Non-Sunward Species Counts Data
-    Logical_source: imap_codice_l1a_lo-nsw-species-counts
+    Data_type: L1A_lo-nsw-species->Level-1A Lo Non-Sunward Species Counts Data
+    Logical_source: imap_codice_l1a_lo-nsw-species
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Non-Sunward Species Counts Data.
