--- a/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
@@ -33,6 +33,20 @@ imap_codice_l1a_hi_counters_singles:
     Logical_source: imap_codice_l1a_hi-counters-singles
     Logical_source_description: IMAP Mission CoDICE Hi Level-1A Single Instrument Counts Data.
 
+imap_codice_l1a_hi_omni:
+    <<: *instrument_base
+    Data_level: 1A
+    Data_type: L1A_hi-omni->Level-1A Hi Omni Data
+    Logical_source: imap_codice_l1a_hi-omni
+    Logical_source_description: IMAP Mission CoDICE Hi Level-1A Omni Data.
+
+imap_codice_l1a_hi_sectored:
+    <<: *instrument_base
+    Data_level: 1A
+    Data_type: L1A_hi-sectored->Level-1A Hi Sectored Data
+    Logical_source: imap_codice_l1a_hi-sectored
+    Logical_source_description: IMAP Mission CoDICE Hi Level-1A Sectored Data.
+
 imap_codice_l1a_lo_counters_aggregated:
     <<: *instrument_base
     Data_level: 1A
